# multibuy-service

./: Cargo.toml  README.md  settings.toml
.github/scripts/: make_debian.sh
.github/workflows/: build.yaml
examples/: hpr_client.rs
pkg/: settings-template.toml
src/: main.rs  settings.rs
