[package]
name = "multi_buy_service"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hpr_client"
crate-type = ["bin"]

[dependencies]
tonic = "0.10"
anyhow = "1.0.75"
tokio = { version = "1.33.0", features = ["full"] }
helium-proto = { git = "https://github.com/helium/proto", branch="master", features=["services"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features=false, features = ["env-filter", "registry", "fmt"] }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
config = {version="0", default-features=false, features=["toml"]}
rand = "0.8.5"